src/index.css
body {
  margin: 0;
  font-family: Inter, sans-serif;
  background-color: #fafaf8;
}

header {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 11px;
  height: 80px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),
    0px 1px 2px 0px rgba(0, 0, 0, 0.06);
}

header > img {
  width: 100px;
}

header > h1 {
  font-family: Monoton, Borel, cursive;
  font-weight: 400;
  font-size: 48px;
}

main {
  padding: 30px 30px 10px;
}

.ingredient-form {
  display: flex;
  justify-content: center;
  gap: 12px;
  height: 38px;
}

.ingredient-form > input {
  border-radius: 6px;
  border: 1px solid #d1d5db;
  padding: 9px 13px;
  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
  flex-grow: 1;
  min-width: 150px;
  max-width: 400px;
}

.ingredient-form > button {
  font-family: Inter, sans-serif;
  border-radius: 6px;
  border: none;
  background-color: #141413;
  color: #fafaf8;
  width: 150px;
  font-size: 0.875rem;
  font-weight: 500;
}

.ingredient-form > button::before {
  content: "+";
  margin-right: 5px;
}

ul.ingredients-list {
  margin-bottom: 48px;
}

ul.ingredients-list > li {
  color: #475467;
  line-height: 28px;
}

.get-cocktail-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 8px;
  background: #f0efeb;
  padding: 10px 28px;
}

.get-cocktail-container h3 {
  font-size: 1.125rem;
  font-weight: 500;
  line-height: 24px;
}

.get-cocktail-container p {
  color: #6b7280;
  font-size: 0.875rem;
  line-height: 20px;
}

.get-cocktail-container button {
  border: none;
  border-radius: 6px;
  background: #d77617;
  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
  color: #fafaf8;
  padding: 9px 17px;
  font-family: Inter, sans-serif;
  font-size: 0.875rem;
  cursor: pointer;
}

.suggested-recipe-container {
  color: #475467;
  line-height: 28px;
  font-size: 1.125rem;
  font-weight: 400;
}

.suggested-recipe-container ul li,
.suggested-recipe-container ol li {
  margin-bottom: 8px;
}

